<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="GUI">Look at my GUI</string>
    <string name="click_here">CLICK HERE</string>
    <string name="check_box">Check this out!</string>
    <string name="switch_on_off">Switch on/off</string>
    <string name="edit_bar">Type here</string>
    <string name="on_message">The switch is now ON</string>
    <string name="off_message">The switch is now OFF</string>
    <string name="toast_message">Here is more information</string>
    <string name="undo_message">Undo</string>
    <string name="emailAdd">Enter your email address</string>
    <string name="typeEmail">Type email here</string>
    <string name="typePassword">Type your password</string>
    <string name="login">Login</string>
    <string name="yourProfile">Your profile</string>
    <string name="yourName">Your name:</string>
    <string name="editName">Enter your name</string>
    <string name="yourEmail">Your email</string>
    <string name="EnterYourEmail">Enter your email</string>
    <string name="picture">Your picture</string>
    <string name="pictureMessage">Click the button above to take picture</string>
    <string name="sendButton">SEND</string>
    <string name="receiveButton">RECEIVE</string>
    <string name="chatButton">Go to chat</string>
    <string name="selectedrow">The selected row is</string>
    <string name="thedatabaseid">The database id is</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wantdelete">Do you want to delete this?</string>
    <string name="currentTemp">Current Temperature:</string>
    <string name="minTemp">Minimum temperature:</string>
    <string name="maxTemp">Maximum Temperature:</string>
    <string name="uv">UV rating:</string>
    <string name="weatherButton">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>