<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GUI"
        android:textSize="30dp"/>


        <Button
            android:id="@+id/button1"
            android:layout_below="@id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:text="@string/click_here" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_below="@id/textView3"
            android:layout_toRightOf="@id/button1"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:text="@string/check_box" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_below="@id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            app:srcCompat="@drawable/flag" />

        <Switch
            android:id="@+id/switch1"
            android:layout_below="@id/checkBox"
            android:layout_toRightOf="@id/imageView"
            android:layout_alignTop="@id/imageView"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:checked="false"
            android:text="@string/switch_on_off" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_below="@id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_bar" />
</RelativeLayout>

